<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSettings">

    <TextView
        android:id="@+id/IPText"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/IP"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/IPInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:inputType="phone"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IPText"
        app:layout_constraintTop_toTopOf="@+id/IPText"
        android:singleLine="true" />

    <Button
        android:id="@+id/powerButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/powerbutton"
        android:onClick="shutDown"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/favoritesReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ResetFavorites"
        app:layout_constraintEnd_toEndOf="@+id/channelSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/channelSearch"
        app:layout_constraintTop_toBottomOf="@+id/channelSearch" />

    <Button
        android:id="@+id/channelSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/SearchChannels"
        android:onClick="scanChannels"
        app:layout_constraintEnd_toEndOf="@+id/connectNewIp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/connectNewIp"
        app:layout_constraintTop_toBottomOf="@+id/connectNewIp" />

    <Button
        android:id="@+id/connectNewIp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/NewIpConnect"
        android:onClick="changeIP"
        app:layout_constraintEnd_toEndOf="@+id/IPInput"
        app:layout_constraintStart_toStartOf="@+id/IPText"
        app:layout_constraintTop_toBottomOf="@+id/IPInput" />
</android.support.constraint.ConstraintLayout>