<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/flipButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mirror"
        android:onClick="buttonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pipButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/pip"
        android:onClick="buttonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flipButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/settings"
        android:onClick="buttonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flipButton" />

    <Button
        android:id="@+id/nightButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="55dp"
        android:background="@drawable/nightmode"
        android:onClick="buttonClick"
        app:layout_constraintStart_toStartOf="@+id/flipButton"
        app:layout_constraintTop_toBottomOf="@+id/flipButton" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/favorites"
        android:onClick="buttonClick"
        app:layout_constraintEnd_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="@+id/nightButton" />

    <SeekBar
        android:id="@+id/volumeSlider"
        android:layout_width="326dp"
        android:layout_height="291dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:max="2500"
        android:maxHeight="100dp"
        android:minHeight="100dp"
        android:progress="1250"
        android:rotation="-45"
        android:thumbTint="#89afed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/rounded_button"
        android:onClick="buttonClick"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/channelPlusButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="buttonClick"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/channelMinusButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/rounded_button"
        android:onClick="buttonClick"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/minus"/>

    <ImageView
        android:id="@+id/playIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/PlayPause"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/plusIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ChannelPlus"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/channelPlusButton"
        app:layout_constraintEnd_toEndOf="@+id/channelPlusButton"
        app:layout_constraintStart_toStartOf="@+id/channelPlusButton"
        app:layout_constraintTop_toTopOf="@+id/channelPlusButton"
        app:srcCompat="@drawable/plus" />

    <ImageView
        android:id="@+id/minusIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ChannelMinus"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/channelMinusButton"
        app:layout_constraintEnd_toEndOf="@+id/channelMinusButton"
        app:layout_constraintStart_toStartOf="@+id/channelMinusButton"
        app:layout_constraintTop_toTopOf="@+id/channelMinusButton"
        app:srcCompat="@drawable/minus" />


</android.support.constraint.ConstraintLayout>